# home-assistant-addons

./: .devcontainer.json  LICENSE  README.md  repository.yaml
ai/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  docker-compose.yml  ingress.conf  pyproject.toml  requirements.txt  run.sh
ai copy/: Dockerfile  build.yaml  run.sh
ai copy/rootfs/etc/services.d/ai/: run
ai/rootfs/: run.sh
ai/rootfs/etc/services.d/example/: finish
ai/translations/: en.yaml
aibackupcopy/: CHANGELOG.md  Dockerfile  README.md  config.yaml
chatbot/: README.md
example/rootfs/etc/services.d/example/: run
example/translations/: en.yaml
